# shytti

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  install.sh  resume.sh
.cargo/: config.toml
inbox/: hermytt-api-shipped.md  hermytt-mode2-data-plane.md  hermytt-release-time.md  hermytt-still-no-data.md
inbox/archive/: crytter-term-bug.md  hermytt-answers.md  hermytt-control-ws-agreed.md  hermytt-control-ws-live.md  hermytt-data-reader-on-reconnect.md  hermytt-dont-crash-unknown-msgs.md  hermytt-mode2-spawn-still-broken.md  hermytt-mode2-ws-closes-immediately.md  hermytt-need-session-id.md  hermytt-registry.md  hermytt-session-api.md  hermytt-shell-died-session-id.md  hermytt-spawn-api.md  hermytt-spawn-shell-fixed.md  hermytt-stale-shells-flooding-on-recovery.md
src/: api.rs  bridge.rs  cli.rs  config.rs  control.rs  error.rs  lib.rs  main.rs  shell.rs
tests/: e2e.rs  integration.rs  regression.rs  security.rs
